--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   flutter_screenutil: ^1.0.2
   dio: ^3.0.9
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
