--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   dio: ^3.0.9
   shared_preferences: ^0.5.6+3
   webview_flutter: ^0.3.19+9
+  event_bus: ^1.1.1
+  provider: ^4.0.4
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -46,9 +49,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - images/user_bg.jpg
+   - images/user.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
