--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   event_bus: ^1.1.1
   provider: ^4.0.4
   fluttertoast: ^3.1.3
+  city_pickers: ^0.1.30
+  crypto: ^2.1.3
 
 dev_dependencies:
   flutter_test:
