完成订单页,添加极光推送,修改app相关信息

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,6 +44,15 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+	    //选择要添加的对应 cpu 类型的 .so 库。
+	    abiFilters 'armeabi', 'armeabi-v7a', 'x86', 'x86_64', 'mips', 'mips64', 'arm64-v8a',        
+        }
+        manifestPlaceholders = [
+        JPUSH_PKGNAME : applicationId,
+        JPUSH_APPKEY : "a8c4078c88e63d152ed3f3cb", // NOTE: JPush 上注册的包名对应的 Appkey.
+        JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+    ]
     }
 
     buildTypes {
