--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   fluttertoast: ^3.1.3
   city_pickers: ^0.1.30
   crypto: ^2.1.3
+  jpush_flutter: ^0.5.3
 
 dev_dependencies:
   flutter_test:
