--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   city_pickers: ^0.1.30
   crypto: ^2.1.3
   jpush_flutter: ^0.5.3
+  apifm: ^0.0.5
 
 dev_dependencies:
   flutter_test:
